Added a new property to the InformationBox called Scale.

--- a/InformationBox.razor
+++ b/InformationBox.razor
@@ -13,7 +13,9 @@
     border-width: 1px;
     border-style: solid;
     border-radius: @BorderRadiusStyle;
-    overflow: hidden;    
+    overflow: hidden;
+    transform: scale(@ScaleValue);
+    transform-origin: top left;
 </Styled>
 <Styled @bind-Classname=@InfoBoxHeaderStyle>
     text-align: center;
