I added a Display property to the Information Box.

--- a/InformationBox.razor
+++ b/InformationBox.razor
@@ -4,6 +4,7 @@
 @using DataJuggler.Blazor.Components.Enumerations
 
 <Styled @bind-Classname=@InfoBoxStyle>
+    display: @Display;
     position: @Position;
     left: @LeftStyle;
     height: @HeightStyle;
@@ -15,7 +16,7 @@
     border-radius: @BorderRadiusStyle;
     overflow: hidden;
     transform: scale(@ScaleValue);
-    transform-origin: top left;
+    transform-origin: top left;    
 </Styled>
 <Styled @bind-Classname=@InfoBoxHeaderStyle>
     text-align: center;
