I added a VerticalAlignmentEnum and the InformationBox now has a VerticalAlignment property.

--- a/InformationBox.razor
+++ b/InformationBox.razor
@@ -16,7 +16,8 @@
     border-radius: @BorderRadiusStyle;
     overflow: hidden;
     transform: scale(@ScaleValue);
-    transform-origin: top left;    
+    transform-origin: top left;
+    vertical-align: @VerticalAlignment;
 </Styled>
 <Styled @bind-Classname=@InfoBoxHeaderStyle>
     text-align: center;
