--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -230,6 +230,9 @@
     flex-wrap: wrap;
     line-height: 16px;   
     background-color: white;
+    position: relative;
+    left: @YearSelectorLeftStyle;
+    top: @YearSelectorTopStyle;
 </Styled>
 <Styled @bind-Classname=@NavButtonCellStyle>
     text-align: center;
@@ -326,38 +329,38 @@
                 </table>
             </div>
         }
-    </div>
-    @if (YearSelectorVisible)
-    {
-        <div class="@YearSelectorContainerStyle border1">
-            @foreach (Decade decade in Decade.CreateDecades())
-            {
-                @if ((HasSelectedDecade) && (SelectedDecade.StartYear == decade.StartYear))
+        @if (YearSelectorVisible)
+        {
+            <div class="@YearSelectorContainerStyle border1">
+                @foreach (Decade decade in Decade.CreateDecades())
                 {
-                    <button class="@YearButtonSelectedStyle border0" @onclick="() => SelectDecade(decade)">@decade.Name</button>
+                    @if ((HasSelectedDecade) && (SelectedDecade.StartYear == decade.StartYear))
+                    {
+                        <button class="@YearButtonSelectedStyle border0" @onclick="() => SelectDecade(decade)">@decade.Name</button>
+                    }
+                    else
+                    {
+                        <button class="@YearButtonStyle border0" @onclick="() => SelectDecade(decade)">@decade.Name</button>
+                    }
                 }
-                else
+                @if ((HasThisDecade) && (!HasSelectedDecade))
                 {
-                    <button class="@YearButtonStyle border0" @onclick="() => SelectDecade(decade)">@decade.Name</button>
-                }
-            }
-            @if ((HasThisDecade) && (!HasSelectedDecade))
-            {
-                // Select this Decade
-                SelectedDecade = ThisDecade;
+                    // Select this Decade
+                    SelectedDecade = ThisDecade;
 
-                // Select this Decade
-                SelectDecade(ThisDecade);
-            }
-            <div class="@DividerStyle"></div>
-            @if ((HasSelectedDecade) && (SelectedDecade.HasYears))
-            {
-                @foreach (int year in SelectedDecade.Years)
-                {
-                    <button class="@YearButtonStyle border0" @onclick="() => SelectYear(year)">@year.ToString()</button>
+                    // Select this Decade
+                    SelectDecade(ThisDecade);
                 }
-            }
-        </div>
-    }
+                <div class="@DividerStyle"></div>
+                @if ((HasSelectedDecade) && (SelectedDecade.HasYears))
+                {
+                    @foreach (int year in SelectedDecade.Years)
+                    {
+                        <button class="@YearButtonStyle border0" @onclick="() => SelectYear(year)">@year.ToString()</button>
+                    }
+                }
+            </div>
+        }
+    </div>    
 </div>
 
