--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -244,8 +244,8 @@
         <tr class="textdonotwrap">
             <td width="@TextBoxWidth">
             <TextBoxComponent Name="DisplayTextBox" Caption="@Caption" Parent="this" 
-                ClassName="displayinline" Column1Width="@Column1Width" 
-                Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" 
+                ClassName="displayinline" Column1Width="@Column1Width" FontSize="@TextBoxFontSize"
+                Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" LabelFontSize="@LabelFontSize"
                 Width="@Width" Height="@TextBoxHeight" LabelClassName="@LabelClassName" 
                 ZIndex="@ZIndex" Left="@TextBoxLeft">
             </TextBoxComponent>
