I added CalendarPosition property to the CalendarComponent.

--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -9,7 +9,7 @@
     height: @HeightStyle;
     width: @WidthStyle;
     z-index: @ZIndex;
-    position: relative;
+    position: @CalendarPosition;
     top: @CalendarTopStyle;
     left: @CalendarLeftStyle;
     border-color: black;
