--- a/InformationBox.razor
+++ b/InformationBox.razor
@@ -14,7 +14,7 @@
     border-width: 1px;
     border-style: solid;
     border-radius: @BorderRadiusStyle;
-    overflow: hidden;
+    overflow: @Overflow;
     transform: scale(@ScaleValue);
     transform-origin: top left;
     vertical-align: @VerticalAlignment;
