Checking in version 9.1.0, which includes a new Toggle Component.

--- a/TextBoxComponent.razor
+++ b/TextBoxComponent.razor
@@ -50,7 +50,7 @@
     width: @ImageWidthStyle;
     height: 100%;
 </Styled>
-<Styled @bind-Classname=@ValidationControlStyle>
+<Styled @bind-Classname=@TextBoxControlStyle>
     width: @WidthStyle;
     position: @Position;
     left: @LeftStyle;
@@ -66,7 +66,7 @@
 
 @if (Visible)
 {  
-    <div class="@ValidationControlStyle">
+    <div class="@TextBoxControlStyle">
         @if (ShowCaption)
         {
             <div class="@Column1Style">
