--- a/wwwroot/css/DataJuggler.Blazor.Components.css
+++ b/wwwroot/css/DataJuggler.Blazor.Components.css
@@ -17,6 +17,8 @@
 .backgroundcoloraquamarine
 {
     background-color: aquamarine;
+    border-bottom-left-radius: 50%;
+    border-top-right-radius: 50%;    
 }
 .backgroundcolorazure
 {
