I added a class called GlobalDefaults do default values are easier to change. Also, I created an ILabelFont interface and TextBoxes, ComboBoxes, Calendars and ToggleComponent all implement this.

--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -260,7 +260,8 @@
             <td width="@TextBoxWidth">
             <TextBoxComponent Name="DisplayTextBox" Caption="@Caption" Parent="this" 
                 ClassName="displayinline" Column1Width="@Column1Width" FontSize="@TextBoxFontSize"
-                Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" LabelFontSize="@LabelFontSize"
+                Column2Width="@Column2Width" TextBoxWidth="@TextBoxWidth" 
+                LabelFontSize="@LabelFontSize" LabelFontName="@LabelFontName"
                 Width="@Width" Height="@TextBoxHeight" LabelClassName="@LabelClassName" 
                 ZIndex="@ZIndex" Left="@TextBoxLeft">
             </TextBoxComponent>
