--- a/CheckedListBox.razor
+++ b/CheckedListBox.razor
@@ -24,7 +24,7 @@
 <Styled @bind-Classname=@ListitemStyle>
     background-color: @ListBackgroundColorName;
     color: @ListItemTextColorName;
-    font-family: Verdana;
+    font-family: Calibri;
     font-size: @FontSizeStyle;
     height: @ListItemHeightStyle;
     left: @ListItemLeftStyle;
