--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -6,6 +6,7 @@
 <Styled @bind-Classname=@LabelStyle>
     display: inline-block;
     font-size: @LabelFontSizeStyle;
+    font-family: @LabelFontName;
     text-align: right;
     background-color: @LabelBackColor;
     margin-right: @LabelMarginRightStyle !important;
@@ -37,7 +38,7 @@
     overflow: visible;
 </Styled>
 <Styled @bind-Classname=@ListItemStyle>
-    font-family: Verdana;
+    font-family: Calibri;
     text-align: left;
     background-color: @ListBackgroundColorName;
     width: @ListItemWidthStyle;
