Checking in before I start the ITextBoxFont changes.

--- a/TextBoxComponent.razor
+++ b/TextBoxComponent.razor
@@ -8,6 +8,7 @@
     background-color: @LabelBackgroundColor;
     color: @LabelColor;
     font-size: @LabelFontSizeStyle;
+    font-family: @LabelFontName;
     text-align: right;
     width: @Column1WidthStyle;
     position: relative;
