--- a/TimeComponent.razor
+++ b/TimeComponent.razor
@@ -51,7 +51,8 @@
         </td>
         <td width="4">
             <TextBoxComponent Name="ColonTextBox" Column1Width="0" Parent="this" 
-                Left="@MinutesTextBoxLeft" Column2Width="4" FontSize="@FontSize"
+                Left="@MinutesTextBoxLeft" Column2Width="4" 
+                FontSize="@FontSize" LabelFontName="@LabelFontName" LabelFontSize ="@LabelFontSize"
                 Width="4" TextBoxClassName="@ColonTextBoxStyle" Enabled="false" Text=":"
                 TextBoxWidth="@MinutesTextBoxWidth" Display="inline-block"
                 ShowCaption="false" ZIndex="40" TabIndex="2">
